V1 for a good mail signature

--- a/mail_sign.html
+++ b/mail_sign.html
@@ -1,1 +1,41 @@
-"" 
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/mystyle.css">
+    </head>
+
+    <body>
+        <div class="container" id="ending-quote">
+            Cordialmente,
+        </div>
+        <div class="container" id="main-information">
+            <div class="container" id="main-brief">
+                <img id="portrait" src="resources/mySelf.jpg" alt="My picture"/>
+                <div>
+                    <p id="name">Juan Sebastian Lengyel<br>Consultor</p>
+                </div>
+            </div>
+            <div class="container" id="main-detail">
+                <p>
+                    tel: +57 313-2561341<br>
+                    mail: juan.lengyel@hotmail.com<br>
+                </p>
+                <div id ="social-links">
+                    <a href="https://github.com/JuanLengyel" target="_blank">
+                        <img class="media-icon" src="resources/GitHub-Mark-120px-plus.png" alt="GitHub logo"/>
+                    </a>
+                    <a href="https://www.linkedin.com/in/juanlengyel/" target="_blank">
+                        <img class="media-icon" src="resources/LI-In-Bug.png" alt="LinkedIn logo"/>
+                    </a>
+                    <a href="https://twitter.com/juan_lengyel" target="_blank">
+                        <img class="media-icon" src="resources/Twitter_Social_Icon_Rounded_Square_Color.png" alt="Twitter logo"/>
+                    </a>
+                    </div>
+            </div>
+        </div>
+        <div class="container" id="footer-information">
+
+        </div>
+    </body>
+</html>
