Better more responsive signature

--- a/mail_sign.html
+++ b/mail_sign.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/mystyle.css">
-    </head>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./style.css">
+</head>
 
-    <body>
-        <div class="container" id="ending-quote">
-            Cordialmente,<br/>
-        </div>
-        <div class="container" id="main-information">
-            <div class="container" id="main-brief">
-                <img id="portrait" src="https://media.licdn.com/dms/image/C4E03AQEt8ZdrhXIY0A/profile-displayphoto-shrink_200_200/0?e=1566432000&v=beta&t=X7eBbuR49Urem6xCrXSknfoEq6wAGjy08nA0K3SU9yw" alt="My picture"/>
-            </div>
-            <div class="container" id="main-detail">
-                <p id="name">Juan Sebastian Lengyel<br/>Consultor</p>
-                <p>
-                    tel: +57 313-2561341<br/>
-                </p>
-                <div id ="social-links">
-                    <a href="https://github.com/JuanLengyel" target="_blank">
-                        <img class="media-icon" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo"/>
-                    </a>
-                    <a href="https://www.linkedin.com/in/juanlengyel/" target="_blank">
-                        <img class="media-icon" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn logo"/>
-                    </a>
-                    <a href="https://twitter.com/juan_lengyel" target="_blank">
-                        <img class="media-icon" src="https://is4-ssl.mzstatic.com/image/thumb/Purple113/v4/74/e7/74/74e774c3-468f-a174-67c4-1d172378536b/ProductionAppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-7.png/246x0w.jpg" alt="Twitter logo"/>
-                    </a>
-                    </div>
-            </div>
-        </div>
-        <div class="container" id="footer-information">
-
-        </div>
-    </body>
+<body>
+  <section class="photo-container">
+    <img src="https://drive.google.com/uc?id=1a_Qc_Gz-nRe7Zrd33WwnXFPTUy6HbL1U" alt="Juan Sebastian Lengyel">
+  </section>
+  
+  <section class="main-information">
+    <div class="fullname">Juan Sebastian Lengyel Zúñiga</div>
+    <div class="title">Fullstack Developer</div>
+    <div class="misc-info"><a href="tel:+57-1-313-2561341">
+      <span>
+        <svg class="misc-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/></svg>
+      </span>
+      <span>+571-3132561341</span>
+    </a></div>
+    <div class="misc-info"><a href="mailto:juan.lengyel@hotmail.com">
+      <span>
+        <svg class="misc-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.574l-12-9.725v15.438h24v-15.438l-12 9.725z"/></svg>
+      </span>
+      <span>juan.lengyel@hotmail.com</span>
+    </a></div>
+  </section>
+  
+  <section class="social-links">
+    <div><a href="https://www.linkedin.com/in/juanlengyel/">
+      <svg xmlns="http://www.w3.org/2000/svg" role="img" id="LinkedIn" viewBox="0 0 24 24" ><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path></svg>
+    </a></div>
+    <div><a href="https://github.com/JuanLengyel">
+      <svg xmlns="http://www.w3.org/2000/svg" role="img" id="Github" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z"/></svg>
+    </a></div>
+    <div><a href="https://twitter.com/juan_lengyel">
+      <svg xmlns="http://www.w3.org/2000/svg" role="img" id="Twitter" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-.139 9.237c.209 4.617-3.234 9.765-9.33 9.765-1.854 0-3.579-.543-5.032-1.475 1.742.205 3.48-.278 4.86-1.359-1.437-.027-2.649-.976-3.066-2.28.515.098 1.021.069 1.482-.056-1.579-.317-2.668-1.739-2.633-3.26.442.246.949.394 1.486.411-1.461-.977-1.875-2.907-1.016-4.383 1.619 1.986 4.038 3.293 6.766 3.43-.479-2.053 1.08-4.03 3.199-4.03.943 0 1.797.398 2.395 1.037.748-.147 1.451-.42 2.086-.796-.246.767-.766 1.41-1.443 1.816.664-.08 1.297-.256 1.885-.517-.439.656-.996 1.234-1.639 1.697z"/></svg>
+    </a></div>
+    <div><a href="https://www.facebook.com/juan.lengyel/">
+      <svg xmlns="http://www.w3.org/2000/svg" role="img" id="Facebook" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"/></svg>
+    </a></div>
+  </section>
+</body>
 </html>
